build: stylized feature "farmer" and added routing

--- a/src/app/features/farmer/farmer-farms/farmer-farms.component.html
+++ b/src/app/features/farmer/farmer-farms/farmer-farms.component.html
@@ -1,1 +1,9 @@
-<p>farmer-farms works!</p>
+<div class="farms-container">
+  <h2>My farms</h2>
+
+  <div class="farms">
+    <app-farmer-farm></app-farmer-farm>
+    <app-farmer-farm></app-farmer-farm>
+    <app-farmer-farm></app-farmer-farm>
+  </div>
+</div>
