--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
@@ -1,1 +1,12 @@
-<p>farmer-product works!</p>
+<div class="product">
+  <p class="product-name">Product name</p>
+
+  <div class="product-content">
+    <div class="product-image"></div>
+    <div class="product-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus cupiditate doloremque, ipsum laboriosam nostrum quis recusandae totam? Illo labore libero molestiae nulla porro quas qui tempore. Et, quos, suscipit?</div>
+    <div class="product-actions">
+      <button class="edit-btn">Edit</button>
+      <button class="delete-btn">Delete</button>
+    </div>
+  </div>
+</div>
