--- a/src/app/features/farmer/farmer-products/farmer-products.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-products.component.html
@@ -1,1 +1,9 @@
-<p>farmer-products works!</p>
+<div class="products-container">
+  <h2>My goods</h2>
+
+  <div class="products">
+    <app-farmer-product></app-farmer-product>
+    <app-farmer-product></app-farmer-product>
+    <app-farmer-product></app-farmer-product>
+  </div>
+</div>
