--- a/src/app/features/farmer/farmer.component.html
+++ b/src/app/features/farmer/farmer.component.html
@@ -1,1 +1,4 @@
-<p>farmer works!</p>
+<div class="farmer-container">
+  <app-farmer-farms></app-farmer-farms>
+  <app-farmer-products></app-farmer-products>
+</div>
