--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,1 +1,23 @@
-<p>header works!</p>
+<div class="header-container">
+  <div class="logo-container">
+    <img src="../../../assets/images/logo.svg" alt="logo" width="100" height="50">
+  </div>
+  <div class="nav-container">
+    <div class="nav-burger">
+      <span class="nav-burger-line"></span>
+      <span class="nav-burger-line"></span>
+      <span class="nav-burger-line"></span>
+    </div>
+    <nav class="nav-header">
+      <ul><li><a href="#">item 1</a></li></ul>
+      <ul><li><a href="#">item 2</a></li></ul>
+      <ul><li><a href="#">item 3</a></li></ul>
+    </nav>
+  </div>
+  <div class="search-container">
+    <input class="form-control search" type="text" [(ngModel)]="term" name="search" autocomplete="off" placeholder="Start searching for a farm product">
+  </div>
+  <div class="redirect-container">
+    <button class="button submit login-redirect">farmer login</button>
+  </div>
+</div>
