--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -14,7 +14,7 @@
   .logo-container {
     grid-area: logo;
   }
-  .redirect-container {
+  .redirect-container, .welcome-user {
     grid-area: redirect;
   }
   .nav-container {
@@ -45,6 +45,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  cursor: pointer;
 
   .nav-burger-line {
     display: inline-block;
@@ -58,7 +59,7 @@
 }
 
 .login-redirect {
-  background-color: $darkGreen;
+  background-color: $primaryGreen;
   border: none;
   color: #fff;
   padding: 0 10px;
@@ -68,4 +69,14 @@
   box-sizing: border-box;
   justify-self: stretch;
   align-self: stretch;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $darkGreen;
+  }
+}
+
+.welcome-user {
+  color: $darkGreen;
+  font-size: 20px;
 }
