--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
@@ -1,9 +1,9 @@
 <div class="product">
-  <p class="product-name">Product name</p>
+  <p class="product-name">{{ product.name }}</p>
 
   <div class="product-content">
     <div class="product-image"></div>
-    <div class="product-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus cupiditate doloremque, ipsum laboriosam nostrum quis recusandae totam? Illo labore libero molestiae nulla porro quas qui tempore. Et, quos, suscipit?</div>
+    <div class="product-description">{{ product.description }}</div>
     <div class="product-actions">
       <button class="edit-btn">Edit</button>
       <button class="delete-btn">Delete</button>
