--- a/src/app/features/farmer/farmer.component.html
+++ b/src/app/features/farmer/farmer.component.html
@@ -1,4 +1,4 @@
 <div class="farmer-container">
   <app-farmer-farms></app-farmer-farms>
-  <app-farmer-products></app-farmer-products>
+  <router-outlet></router-outlet>
 </div>
