feat: add product-category component, fonts and slide2

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,4 +2,7 @@
   <section class="slide">
     <app-slide></app-slide>
   </section>
+  <section class="product-categories">
+    <app-product-categories></app-product-categories>
+  </section>
 </div>
