--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,6 +1,8 @@
 .home-container{
   display: flex;
   flex-direction: column;
-  gap: 2em;
   padding: 1em 0;
+}
+.product-categories{
+  padding: 0 1em;
 }
