feat: add map preview component

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -5,4 +5,7 @@
   <section class="product-categories">
     <app-product-categories></app-product-categories>
   </section>
+  <section class="map">
+    <app-map></app-map>
+  </section>
 </div>
