style: add style for scroll, sections ids and onPush

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,10 +2,10 @@
   <section class="slide">
     <app-slide></app-slide>
   </section>
-  <section class="product-categories">
+  <section class="product-categories" id="product-categories">
     <app-product-categories></app-product-categories>
   </section>
-  <section class="map">
+  <section class="map" id="farm-map">
     <app-map></app-map>
   </section>
 </div>
