--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
@@ -6,7 +6,7 @@
     <div class="product-description">{{ product.description }}</div>
     <div class="product-actions">
       <button class="edit-btn">Edit</button>
-      <button class="delete-btn">Delete</button>
+      <button class="delete-btn" (click)="onDeleteProduct()">Delete</button>
     </div>
   </div>
 </div>
