feat: add top-farms component

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -8,4 +8,7 @@
   <section class="map" id="farm-map">
     <app-map></app-map>
   </section>
+  <section class="top-farms" id="top-farms">
+    <app-top-farms></app-top-farms>
+  </section>
 </div>
