--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,12 +1,14 @@
-.home-container{
+.home-container {
   display: flex;
   flex-direction: column;
   padding: 1em 0;
 }
-.product-categories{
+.product-categories {
   padding: 0 1em;
 }
-
-.map{
+.top-farms {
+  padding: 0 1em;
+}
+.map {
   margin: 2em 0;
 }
