--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,12 @@
   font-weight: 700;
   font-style: normal;
 }
+@font-face {
+  font-family: "OpenSansLight";
+  src: local("OpenSans"), url(./assets/fonts/OpenSans/OpenSans-Light.ttf) format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
 
 *{
   box-sizing: border-box;
@@ -25,6 +31,8 @@ body{
 
 @for $index from 1 through 6 {
   h#{$index} {
-    font-family: "OpenSansBold";
+    font-family: "OpenSansLight";
+    text-align: center;
+    font-size: 2.2em;
   }
 }
