--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-container">
   <div class="logo-container">
     <a routerLink="/">
-      <img src="../../../assets/images/logo.svg" alt="logo" width="100" height="50">
+      <img src="../../../assets/images/logo.svg" alt="logo" class="logo">
     </a>
   </div>
   <div class="nav-container">
