--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,28 +1,41 @@
 @import "src/variables";
 
 .header-container {
+  padding-top: 1em;
   display: grid;
   justify-items: center;
   align-items: center;
   gap: 1em;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 2fr 1fr;
   grid-template-areas:
-    "logo logo logo"
-    "nav search redirect";
+    "logo logo logo logo logo redirect"
+    "nav search search search search search ";
 
   .logo-container {
     grid-area: logo;
+    justify-self: flex-start;
+
+    .logo {
+      width: 200px;
+      height: 80px;
+    }
   }
-  .redirect-container, .welcome-user {
+  .redirect-container,
+  .welcome-user {
     grid-area: redirect;
+    padding: 0 1em;
+
   }
   .nav-container {
     grid-area: nav;
+    padding: 0 1em;
+    justify-self: flex-start;
   }
   .search-container {
     grid-area: search;
     justify-self: stretch;
+    padding: 0 1em;
   }
 }
 
