--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -3,6 +3,7 @@
 .header-container {
   padding-top: 1em;
   display: grid;
+  position: relative;
   justify-items: center;
   align-items: center;
   gap: 1em;
@@ -15,6 +16,8 @@
   .logo-container {
     grid-area: logo;
     justify-self: flex-start;
+    z-index: 9;
+    margin-left: 1em;
 
     .logo {
       width: 200px;
@@ -25,11 +28,10 @@
   .welcome-user {
     grid-area: redirect;
     padding: 0 1em;
-
   }
   .nav-container {
     grid-area: nav;
-    padding: 0 1em;
+    padding: 0 2em;
     justify-self: flex-start;
   }
   .search-container {
@@ -58,7 +60,10 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  position: relative;
   cursor: pointer;
+  background: none;
+  border: none;
 
   .nav-burger-line {
     display: inline-block;
@@ -66,9 +71,45 @@
     border: 2px solid $primaryGreen;
   }
 }
+.nav-header-menu {
+  padding: 3em;
+  width: 70%;
+  height: 100vh;
+  background-color: $limeGreenTransparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
 
-.nav-header {
-  display: none;
+  .nav-parent{
+    color: #fff;
+    text-decoration: none;
+    font-size: 5vh;
+  }
+
+  ul.nav-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+    li {
+      list-style: none;
+
+      a {
+        color: #000;
+        font-size: 4vh;
+        text-decoration: none;
+
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
 
 .login-redirect {
