feat: add footer copyright with style

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<div class="footer-container">
+  <div class="copyright">
+    Copyright © [EPAM Global] Project Education Competition
+    <br>
+    Project 1_Local Goods Team 1
+  </div>
+</div>
