--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,45 +1,17 @@
-<div class="header-container">
-  <div class="logo-container" [ngStyle]="nav ? {'visibility':'hidden'} : null">
-    <a routerLink="/">
-      <img src="../../../assets/images/logo.svg" alt="logo" class="logo" />
-    </a>
-  </div>
-  <div class="nav-container">
-    <button class="nav-burger" #toggleButton (click)="toggleMenu($event)">
-      <span class="nav-burger-line"></span>
-      <span class="nav-burger-line"></span>
-      <span class="nav-burger-line"></span>
-    </button>
-    <nav class="nav-header-menu" *ngIf="nav" #nav>
-      <a href="#" class="nav-parent">Categories</a>
-      <ul class="nav-list">
-        <li><a href="#">Milk and cream</a></li>
-        <li><a href="#">Vegitables</a></li>
-        <li><a href="#">Fruits</a></li>
-        <li><a href="#">Meat</a></li>
-        <li><a href="#">Poultry</a></li>
-        <li><a href="#">Fish</a></li>
-      </ul>
-      <a href="#" class="nav-parent">Contacts</a>
-      <a href="#" class="nav-parent">Info</a>
-    </nav>
-  </div>
-  <div class="search-container" *ngIf="currentPage === '/'">
-    <input
-      class="form-control search"
-      type="text"
-      [(ngModel)]="term"
-      name="search"
-      autocomplete="off"
-      placeholder="Start searching for a farm product"
-    />
-  </div>
+<div class="header-container" [ngClass]="currentPage === '/' ? 'home' : null">
+  <app-logo class="logo-container"></app-logo>
+  <app-nav class="nav-container"></app-nav>
+  <app-search
+    class="search-container"
+    *ngIf="currentPage === '/products' || currentPage === '/farms'"
+  ></app-search>
   <div class="redirect-container" *ngIf="currentPage === '/'">
     <button class="button submit login-redirect" routerLink="farmer">
       Farmer login
     </button>
   </div>
-  <h2 class="welcome-user" *ngIf="currentPage === '/farmer'">
-    Welcome, Farmer!
-  </h2>
+  <app-greeting
+    class="welcome-user"
+    *ngIf="currentPage === '/farmer/1'"
+  ></app-greeting>
 </div>
