style: edit styles to sections as of tester suggestions

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,13 +2,13 @@
   <section class="slide">
     <app-slide></app-slide>
   </section>
-  <section class="product-categories" id="product-categories">
-    <app-product-categories></app-product-categories>
+  <section>
+    <app-product-categories class="product-categories" id="product-categories"></app-product-categories>
   </section>
-  <section class="map" id="farm-map">
-    <app-map></app-map>
+  <section >
+    <app-map class="map" id="farm-map"></app-map>
   </section>
-  <section class="top-farms" id="top-farms">
-    <app-top-farms></app-top-farms>
+  <section >
+    <app-top-farms class="top-farms" id="top-farms"></app-top-farms>
   </section>
 </div>
