--- a/src/app/features/home/product-categories/product-category/product-category.component.scss
+++ b/src/app/features/home/product-categories/product-category/product-category.component.scss
@@ -1,8 +1,8 @@
 @import "src/variables";
 
 .product-category {
-  justify-self: stretch;
-  align-self: stretch;
+  width: 100%;
+  min-width: 150px;
   background-color: $primaryGreen;
   border-radius: 10px;
   color: #fff;
@@ -19,5 +19,8 @@
     content: "";
     padding-bottom: 100%;
     display: block;
+  }
+  &:first-child {
+    margin-left: 1em;
   }
 }
