--- a/src/app/features/home/slide/slide.component.html
+++ b/src/app/features/home/slide/slide.component.html
@@ -1,9 +1,13 @@
 <div class="slide-container">
   <div class="slide-item">
-    <picture>
+    <picture class="hero-image">
       <source srcset="../../../../assets/images/slides/slide1-800.jpg" media="(min-width: 650px)" />
       <source srcset="../../../../assets/images/slides/slide1-450.jpg" media="(min-width: 320px)" />
       <img src="../../../../assets/images/slides/slide1.jpg" alt="Local goods image" />
     </picture>
+    <div class="hero-text">
+      <h1 class="hero-heading">All fresh and tasty!</h1>
+      <button class="hero-button">click to start</button>
+    </div>
   </div>
 </div>
