--- a/src/app/features/home/product-categories/product-categories.component.scss
+++ b/src/app/features/home/product-categories/product-categories.component.scss
@@ -1,6 +1,11 @@
+h2{
+  margin: 0;
+  font-size: 5vw;
+}
+
 .product-categories-list{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  gap: 1em
+  display: flex;
+  gap: 1em;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
