--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,12 @@
   font-weight: 100;
   font-style: normal;
 }
+@font-face {
+  font-family: "Pacifico";
+  src: local("Pacifico"), url(./assets/fonts/Pacifico/Pacifico-Regular.ttf) format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
 
 *{
   box-sizing: border-box;
