--- a/src/app/core/header/greeting/greeting.component.scss
+++ b/src/app/core/header/greeting/greeting.component.scss
@@ -1,3 +1,10 @@
-h2{
-  font-size: 2em;
+@import "src/variables";
+
+.welcome-text {
+  color: $darkGreen;
+  font-size: 1.2em;
+  font-family: "Pacifico";
+  line-height: 1em;
+  display: block;
+  text-align: right;
 }
