--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -9,11 +9,15 @@
   gap: 1em;
   grid-template-columns: auto;
   grid-template-rows: auto;
-  grid-template-areas: "nav logo welcome";
+  grid-template-areas: "nav logo search";
   box-sizing: border-box;
 
   &.home {
     grid-template-areas: "nav logo redirect";
+  }
+  &.farm {
+    grid-template-areas: "nav logo welcome";
+    grid-template-columns: 10% auto 20%;
   }
 
   .logo-container {
@@ -56,7 +60,3 @@
   }
 }
 
-.welcome-user {
-  color: $darkGreen;
-  font-size: 1.2em;
-}
