--- a/src/app/features/farmer/farmer-farms/farmer-farms.component.html
+++ b/src/app/features/farmer/farmer-farms/farmer-farms.component.html
@@ -1,15 +1,19 @@
 <div class="farms-container">
   <h2>My farms</h2>
+  <div class="farms-scroll">
+    <div class="farms">
+      <div class="farms-add" (click)="openModal()">
+        <span class="plus">+</span>
+        <p class="farms-add-text">Add farm</p>
+      </div>
 
-  <div class="farms">
-    <div class="farms-add" (click)="openModal()">
-      <span class="plus">+</span>
-      <p class="farms-add-text">Add farm</p>
+      <app-farmer-farm
+        *ngFor="let farm of farms$ | async; let i = index"
+        [farm]="farm"
+        [isFirstItem]="i === 0"
+      >
+      </app-farmer-farm>
     </div>
-
-    <app-farmer-farm *ngFor="let farm of farms$ | async; let i = index"
-                     [farm]="farm" [isFirstItem]="i === 0">
-    </app-farmer-farm>
   </div>
 </div>
 
@@ -17,16 +21,18 @@
   <div class="modal">
     <p class="modal-title">Add new farm</p>
 
-    <form class="modal-form" #addFarmForm="ngForm"
-          (ngSubmit)="onAddFarm(addFarmForm.value)">
+    <form
+      class="modal-form"
+      #addFarmForm="ngForm"
+      (ngSubmit)="onAddFarm(addFarmForm.value)"
+    >
       <label for="farmName">Farm name</label>
-      <input type="text" id="farmName" name="farmName" ngModel>
+      <input type="text" id="farmName" name="farmName" ngModel />
 
       <div class="modal-buttons">
         <button type="submit">Save</button>
         <button type="button" (click)="closeModal()">Cancel</button>
       </div>
     </form>
-
   </div>
 </app-modal>
