--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "src/variables";
+
 @font-face {
   font-family: "OpenSans";
   src: local("OpenSans"), url(./assets/fonts/OpenSans/OpenSans-Regular.ttf) format("truetype");
@@ -42,3 +44,48 @@ body{
   }
 }
 
+button {
+  padding: 10px 20px;
+  color: white;
+  background-color: $primaryGreen;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $darkGreen;
+  }
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &-title {
+    font-weight: bold;
+    margin-top: 0;
+  }
+
+  &-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    input {
+      padding: 10px 10px;
+      border: 1px solid silver;
+      box-sizing: border-box;
+      border-radius: 5px;
+
+      &:hover {
+        border-color: $primaryGreen;
+      }
+    }
+  }
+
+  &-buttons {
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
