feat: add products page component

--- a/src/app/core/header/search/search.component.html
+++ b/src/app/core/header/search/search.component.html
@@ -4,5 +4,5 @@
   [(ngModel)]="term"
   name="search"
   autocomplete="off"
-  placeholder="Start searching for a farm product"
+  placeholder="Enter product or farm name"
 />
