--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
+<div class="wrapper">
 
-<router-outlet></router-outlet>
+  <app-header class="page-header"></app-header>
+  
+  <router-outlet class="page-body"></router-outlet>
+  
+  <app-footer class="page-footer"></app-footer>
 
-<app-footer></app-footer>
+</div>
