--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -9,7 +9,8 @@
   gap: 1em;
   grid-template-columns: auto;
   grid-template-rows: auto;
-  grid-template-areas: "nav logo search";
+  grid-template-areas: "nav . logo"
+                        "search search search";
   box-sizing: border-box;
 
   &.home {
