--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,12 @@
 .wrapper {
-  min-height: 100%;
   box-sizing: border-box;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  
+
   .page-header,
   .page-footer {
     flex-grow: 0;
     flex-shrink: 0;
-  }
-
-  .page-body {
-    flex-grow: 1;
   }
 }
