--- a/src/app/features/farm/farm.component.scss
+++ b/src/app/features/farm/farm.component.scss
@@ -1,6 +1,11 @@
 .farm-page-description{
   padding: 0 1em;
 }
+.farm-page-image{
+   img{
+    width: 100%;
+   }
+}
 .farm-page-products{
   padding: 0 1em;
 }
