feat: add filter component to grid

--- a/src/app/shared/components/grid/grid.component.html
+++ b/src/app/shared/components/grid/grid.component.html
@@ -19,3 +19,4 @@
     <app-grid-item *ngFor="let item of items | sort: sortData" [item]="item"></app-grid-item>
   </div>
 </div>
+<app-filters *ngIf="filterOpened"></app-filters>
